# yojana-saathi

./: CHATBOT_IMPLEMENTATION.md  CHATBOT_SETUP.md  PACKAGE_SCRIPTS.md  QUICK_START.md  README.md  agent.py  livekit.toml  package-lock.json  package.json  requirements.txt
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/api/chatbot/: route.ts
app/api/get-voice-token/: route.ts
app/api/schemes/: route.ts
app/api/schemes/[category]/: route.ts
app/api/schemes/[category]/[id]/: route.ts
app/contact/: page.tsx
app/schemes/: page.tsx
app/schemes/[category]/: page.tsx
app/schemes/[category]/[id]/: page.tsx
components/: Footer.tsx  Navbar.tsx  SchemeChatbot.tsx
lib/: mongodb.ts
models/: Scheme.ts
voice-agent/: Dockerfile  livekit.toml  main.py  pyproject.toml
